force-app/main/default/objects/cpm__Related_Information_Setting__c/cpm__Related_Information_Setting__c.object-meta.xml
<CustomObject>
    <label>Related Information Setting</label>
    <nameField>
        <displayFormat>RIS-{0}</displayFormat>
        <label>Related Information Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Information Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>