force-app/main/default/objects/cpm__Related_Information_Setting__c/fields/cpm__Child_sObject__c.field-meta.xml
<CustomField>
    <fullName>cpm__Child_sObject__c</fullName>
    <label>Child sObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>