force-app/main/default/objects/cpm__Related_Information_Setting__c/fields/cpm__Limit__c.field-meta.xml
<CustomField>
    <fullName>cpm__Limit__c</fullName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>