force-app/main/default/objects/cpm__Related_Information_Setting__c/fields/cpm__Order_by__c.field-meta.xml
<CustomField>
    <fullName>cpm__Order_by__c</fullName>
    <label>Order by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>