force-app/main/default/objects/cpm__Related_Information_Setting__c/fields/cpm__Order_By_Direction__c.field-meta.xml
<CustomField>
    <fullName>cpm__Order_By_Direction__c</fullName>
    <label>Order By Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asc</fullName>
            </value>
            <value>
                <fullName>Desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>