force-app/main/default/objects/cpm__Related_Information_Setting__c/fields/cpm__Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>cpm__Relationship_Field__c</fullName>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>